[package]
name = "fcupdater"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "CLI tool to update fuel_cost_chungcheong.xlsx from regional .xls/.xlsx source files."
license = "UNLICENSED"
repository = "https://github.com/krwizxp/fcupdater"
keywords = ["excel", "xlsx", "xls", "cli", "sync"]
categories = ["command-line-utilities", "encoding"]
[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
suspicious = "warn"
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
expect_used = "warn"
map_err_ignore = "warn"
multiple_unsafe_ops_per_block = "warn"
panic = "warn"
ref_patterns = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_used = "warn"
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
