[package]
name = "fcupdater"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "CLI tool to update fuel_cost_chungcheong.xlsx from regional .xls/.xlsx source files."
license = "UNLICENSED"
repository = "https://github.com/krwizxp/fcupdater"
keywords = ["excel", "xlsx", "xls", "cli", "sync"]
categories = ["command-line-utilities", "encoding"]
[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
correctness = { level = "deny", priority = -1 }
suspicious = "warn"
allow_attributes_without_reason = "warn"
allow_attributes = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
dbg_macro = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
host_endian_bytes = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
iter_over_hash_type = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
little_endian_bytes = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
multiple_unsafe_ops_per_block = "warn"
needless_raw_strings = "warn"
panic = "warn"
panic_in_result_fn = "warn"
pattern_type_mismatch = "warn"
pathbuf_init_then_push = "warn"
pub_with_shorthand = "warn"
ref_patterns = "warn"
redundant_type_annotations = "warn"
return_and_then = "warn"
same_name_method = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
single_char_lifetime_names = "warn"
string_lit_chars_any = "warn"
str_to_string = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unseparated_literal_suffix = "warn"
unimplemented = "warn"
unused_trait_names = "warn"
unreachable = "warn"
unwrap_used = "warn"
use_debug = "warn"
wildcard_enum_match_arm = "warn"
else_if_without_else = "warn"
pub_use = "warn"
tests_outside_test_module = "warn"
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
